cmake_minimum_required(VERSION 3.17)
project(serialExample)
set(CMAKE_AUTOMOC ON)
set(CMAKE_CXX_STANDARD 14)
find_package(Qt5 COMPONENTS REQUIRED Core Gui Widgets SerialPort)
add_executable(serialExample main.cpp Presenter.cpp Presenter.h)
target_link_libraries(serialExample Qt5::Core Qt5::Gui Qt5::Widgets Qt5::SerialPort)